Change baseDir to empty directory for browser sync and adding routes.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,5 +11,13 @@
 		<input type="text">
 		<div>Hello guy</div>
 	</div>
+	<div class="test">
+		
+	</div>
+	
+	<div style="height:1600px;">
+		<div class="test"></div>
+		<input type="text" class="hello">
+	</div>
 </body>
 </html>
