Add angular2 to the project

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -19,5 +19,6 @@
 		<div class="test"></div>
 		<input type="text" class="hello">
 	</div>
+	<script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
 </body>
 </html>
