Add first component angular2

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,14 +11,20 @@
 		<input type="text">
 		<div>Hello guy</div>
 	</div>
+	
+	hello comment va?
+	
 	<div class="test">
-		
+		<div class="test">
+			<div>test</div>
+		</div>
 	</div>
 	
 	<div style="height:1600px;">
 		<div class="test"></div>
 		<input type="text" class="hello">
 	</div>
+	<script src="/node_modules/es6-shim/es6-shim.js"></script>	
 	<script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
 </body>
 </html>
