--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,26 +5,42 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Test page!23</h1>
-	<div>
-		<div>test</div>
-		<input type="text">
-		<div>Hello guy</div>
-	</div>
-	
-	hello comment va?
-	
-	<div class="test">
-		<div class="test">
-			<div>test</div>
-		</div>
-	</div>
-	
-	<div style="height:1600px;">
-		<div class="test"></div>
-		<input type="text" class="hello">
-	</div>
+	<my-app>loading..</my-app>
+	<script src="/node_modules/systemjs/dist/system-polyfills.src.js"></script>
 	<script src="/node_modules/es6-shim/es6-shim.js"></script>	
+	<script src="/node_modules/systemjs/dist/system.src.js"></script>
 	<script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
+	<script>
+			System.config({
+		"defaultJSExtensions": true,
+		"packageConfigPaths": [
+			"/node_modules/*/package.json",
+			"/node_modules/**/package.json"
+		],
+		"paths": {
+			"main": "/main",
+			"angular2/*": "/angular2/*",
+			"app/*": "/app/*",
+			"*": "/node_modules/*"
+		},
+		"packages": {
+			"angular2": {
+			"defaultExtension": false
+			}
+		}
+		})
+  </script>
+  
+  <script src="/node_modules/angular2/bundles/angular2.js"></script>
+  <script src="/node_modules/angular2/bundles/router.js"></script>
+  <script src="/node_modules/angular2/bundles/http.js"></script>
+  
+  <script>
+  System.import('main')
+    .catch(function (e) {
+      console.error(e,
+        'Report this error at https://github.com/jaroost/builder_app/issues');
+    });
+  </script>
 </body>
 </html>
