Add Jwt with Auth0 for the angular app

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+  <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 	<my-app>loading..</my-app>
@@ -27,6 +29,9 @@
   "packages": {
     "rxjs": {
       "defaultExtension": false
+    },
+    "angular2-jwt": {
+      "defaultExtension": "js"
     }
   }
 })
