--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-  <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
+  <script src="lock-9.1.min.js"></script>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
