Add the router to the angular app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
+<a [routerLink]="['Profile']">Profile</a>
+<a [routerLink]="['Test']">Test</a>
 <auth0></auth0>
-<h1>Test super cool test</h1>
-
-<ul>
-    <li *ngFor="let str of test"> {{str}}</li>
-</ul>
-
-<heroes></heroes>
-
-<h1>Test 2 </h1>
+<router-outlet></router-outlet>
