try to use angular 2 material problem with ng2-material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Welcome to Angular2 with Auth0</h1>
+<button md-raised-button class="md-raised">Button</button>
 <button *ngIf="!loggedIn()" (click)="login()">Login</button>
 <button *ngIf="loggedIn()" (click)="logout()">logout</button>
 
