--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,13 +14,16 @@
   <script src="/node_modules/reflect-metadata/Reflect.js"></script>
   <script src="/node_modules/es6-shim/es6-shim.js"></script>
   <script src="/node_modules/systemjs/dist/system.src.js"></script>
+  <link rel="stylesheet" href="node_modules/ng2-material/ng2-material.css">
+  <link rel="stylesheet" href="node_modules/ng2-material/font/font.css">
 	<script>
 			System.config({
   "defaultJSExtensions": true,
   "packageConfigPaths": [
     "/node_modules/*/package.json",
     "/node_modules/**/package.json",
-    "/node_modules/@angular/*/package.json"
+    "/node_modules/@angular/*/package.json",
+    "/node_modules/@angular2-material/*/package.json"
   ],
   "paths": {
     "main": "/main",
