--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>Welcome to Angular2 with Auth0</h1>
-<button md-raised-button class="md-raised">Button</button>
-<button *ngIf="!loggedIn()" (click)="login()">Login</button>
-<button *ngIf="loggedIn()" (click)="logout()">logout</button>
+<button *ngIf="!loggedIn()" (click)="login()" md-raised-button class="md-raised">Login</button>
+<button *ngIf="loggedIn()" (click)="logout()" md-raised-button class="md-raised">logout</button>
 
-<button *ngIf="loggedIn()" [routerLink]="['Profile']">Profile</button>
-<button [routerLink]="['Test']">Test</button>
+<button *ngIf="loggedIn()" [routerLink]="['Profile']" md-raised-button class="md-raised">Profile</button>
+<button [routerLink]="['Test']" md-raised-button class="md-raised">Test</button>
 <router-outlet></router-outlet>
