--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
 
 <button *ngIf="loggedIn()" [routerLink]="['Profile']" md-raised-button class="md-raised md-primary">Profile</button>
 <button [routerLink]="['Test']" md-raised-button class="md-raised md-primary">Test</button>
+<button [routerLink]="['Users']" md-raised-button class="md-raised md-primary">Users</button>
 </md-toolbar>
 <router-outlet></router-outlet>
