--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,13 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
-	<my-app>loading..</my-app>
+	<sd-app>loading..</my-app>
   <script src="/node_modules/systemjs/dist/system-polyfills.src.js"></script>
   <script src="/node_modules/reflect-metadata/Reflect.js"></script>
   <script src="/node_modules/es6-shim/es6-shim.js"></script>
   <script src="/node_modules/systemjs/dist/system.src.js"></script>
-  <link rel="stylesheet" href="node_modules/ng2-material/ng2-material.css">
-  <link rel="stylesheet" href="node_modules/ng2-material/font/font.css">
 	<script>
 			System.config({
   "defaultJSExtensions": true,
@@ -26,7 +24,7 @@
     "/node_modules/@angular2-material/*/package.json"
   ],
   "paths": {
-    "main": "/main",
+    ["main"]: "/main",
     "rxjs/*": "/rxjs/*",
     "app/*": "/app/*",
     "*": "/node_modules/*"
